feat: add translations for english and german

--- a/bloom-landing-page/public/locales/de/translation.json
+++ b/bloom-landing-page/public/locales/de/translation.json
@@ -1,101 +1,101 @@
 {
   "hero": {
-    "softwareFactory": "[de] SOFTWARE FACTORY",
-    "title": "[de] Bloom",
-    "subtitle": "[de] Transformamos ideas en <1>MVPs exitosos</1> y <2>startups revolucionarias</2>. Desarrollo web, diseño UX/UI y prototipos que impulsan el futuro.",
-    "cta_project": "[de] Iniciar Proyecto &rarr;",
-    "cta_portfolio": "[de] Ver Portfolio",
-    "metric_projects": "[de] Proyectos Completados",
-    "metric_clients": "[de] Clientes Satisfechos",
-    "metric_support": "[de] Soporte Técnico"
+    "softwareFactory": "SOFTWARE FACTORY",
+    "title": "Bloom",
+    "subtitle": "Wir verwandeln Ideen in <1>erfolgreiche MVPs</1> und <2>revolutionäre Startups</2>. Webentwicklung, UX/UI-Design und Prototypen, die die Zukunft gestalten.",
+    "cta_project": "Projekt starten &rarr;",
+    "cta_portfolio": "Portfolio ansehen",
+    "metric_projects": "Abgeschlossene Projekte",
+    "metric_clients": "Zufriedene Kunden",
+    "metric_support": "Technischer Support"
   },
   "services": {
-    "title": "[de] Nuestros Servicios",
-    "mvp_title": "[de] MVP",
-    "mvp_desc": "[de] Lanzamos tu producto mínimo viable en tiempo récord.",
-    "web_dev_title": "[de] Desarrollo Web",
-    "web_dev_desc": "[de] Aplicaciones web modernas, rápidas y escalables.",
-    "ux_ui_title": "[de] Diseño UX/UI",
-    "ux_ui_desc": "[de] Interfaces intuitivas y atractivas centradas en el usuario.",
-    "mobile_title": "[de] Móvil",
-    "mobile_desc": "[de] Desarrollo de aplicaciones nativas y multiplataforma.",
-    "backend_title": "[de] Backend",
-    "backend_desc": "[de] Sistemas robustos y eficientes para potenciar tu aplicación."
+    "title": "Unsere Dienstleistungen",
+    "mvp_title": "MVP",
+    "mvp_desc": "Wir bringen Ihr Minimum Viable Product in Rekordzeit auf den Markt.",
+    "web_dev_title": "Web-Entwicklung",
+    "web_dev_desc": "Moderne, schnelle und skalierbare Webanwendungen.",
+    "ux_ui_title": "UX/UI-Design",
+    "ux_ui_desc": "Intuitive und ansprechende benutzerzentrierte Oberflächen.",
+    "mobile_title": "Mobil",
+    "mobile_desc": "Entwicklung nativer und plattformübergreifender Anwendungen.",
+    "backend_title": "Backend",
+    "backend_desc": "Robuste und effiziente Systeme zur Unterstützung Ihrer Anwendung."
   },
   "portfolio": {
-    "title": "[de] Nuestro Portfolio",
-    "project_alpha_title": "[de] Proyecto Alpha",
-    "project_alpha_desc": "[de] Una plataforma de e-commerce para una startup de moda.",
-    "project_beta_title": "[de] Proyecto Beta",
-    "project_beta_desc": "[de] Aplicación móvil para gestión de finanzas personales.",
-    "project_gamma_title": "[de] Proyecto Gamma",
-    "project_gamma_desc": "[de] Dashboard de análisis de datos para una empresa de logística.",
-    "project_delta_title": "[de] Proyecto Delta",
-    "project_delta_desc": "[de] Red social para amantes de las mascotas.",
-    "project_epsilon_title": "[de] Proyecto Epsilon",
-    "project_epsilon_desc": "[de] Sistema de reservas para una cadena de restaurantes.",
-    "project_zeta_title": "[de] Proyecto Zeta",
-    "project_zeta_desc": "[de] Plataforma de e-learning con contenido interactivo.",
-    "view_project": "[de] Ver Proyecto"
+    "title": "Unser Portfolio",
+    "project_alpha_title": "Projekt Alpha",
+    "project_alpha_desc": "Eine E-Commerce-Plattform für ein Mode-Startup.",
+    "project_beta_title": "Projekt Beta",
+    "project_beta_desc": "Mobile Anwendung für die persönliche Finanzverwaltung.",
+    "project_gamma_title": "Projekt Gamma",
+    "project_gamma_desc": "Datenanalyse-Dashboard für ein Logistikunternehmen.",
+    "project_delta_title": "Projekt Delta",
+    "project_delta_desc": "Soziales Netzwerk für Tierliebhaber.",
+    "project_epsilon_title": "Projekt Epsilon",
+    "project_epsilon_desc": "Reservierungssystem für eine Restaurantkette.",
+    "project_zeta_title": "Projekt Zeta",
+    "project_zeta_desc": "E-Learning-Plattform mit interaktiven Inhalten.",
+    "view_project": "Projekt ansehen"
   },
   "team": {
-    "title": "[de] Nuestro Equipo",
-    "agustin_role": "[de] Desarrollador Full Stack",
-    "bruno_role": "[de] Diseñador Web y Analista de Marketing",
-    "florencia_role": "[de] Product Manager",
-    "gabriel_role": "[de] Desarrollador Full Stack"
+    "title": "Unser Team",
+    "agustin_role": "Full-Stack-Entwickler",
+    "bruno_role": "Webdesigner und Marketinganalyst",
+    "florencia_role": "Produktmanagerin",
+    "gabriel_role": "Full-Stack-Entwickler"
   },
   "readiness": {
-    "title": "[de] Test de <1>Preparación</1>",
-    "subtitle": "[de] Descubre si tu proyecto está listo para el desarrollo",
-    "result_ready_title": "[de] ¡Estás listo para empezar!",
-    "result_ready_desc": "[de] Tienes una base sólida para comenzar a construir tu proyecto. Contáctanos para dar el siguiente paso.",
-    "result_almost_title": "[de] Casi listo",
-    "result_almost_desc": "[de] Tienes una buena idea, pero hay algunas áreas que podemos pulir juntos. Una sesión de consultoría podría ser muy útil.",
-    "result_ideation_title": "[de] Fase de ideación",
-    "result_ideation_desc": "[de] Estás en una etapa temprana, ¡y es el momento perfecto para definir una estrategia sólida! Podemos ayudarte a dar forma a tu idea.",
-    "retake_test": "[de] Hacer el test de nuevo",
-    "question_of": "[de] Pregunta {{current}} de {{total}}",
-    "q1": "[de] ¿Tienes una idea clara de tu producto o servicio?",
-    "q1_o1": "[de] Sí, muy clara y detallada",
-    "q1_o2": "[de] Tengo una idea general",
-    "q1_o3": "[de] Está en desarrollo",
-    "q1_o4": "[de] No, solo tengo una vaga idea",
-    "q2": "[de] ¿Has definido a tu público objetivo?",
-    "q2_o1": "[de] Sí, a fondo",
-    "q2_o2": "[de] Tengo una idea superficial",
-    "q2_o3": "[de] No, no sé por dónde empezar",
-    "q2_o4": "[de] No estoy seguro",
-    "q3": "[de] ¿Cuentas con un presupuesto asignado?",
-    "q3_o1": "[de] Sí, y es flexible",
-    "q3_o2": "[de] Sí, pero es ajustado",
-    "q3_o3": "[de] No, estoy buscando financiación",
-    "q3_o4": "[de] Prefiero no decirlo",
-    "q4": "[de] ¿Cuál es tu plazo de lanzamiento estimado?",
-    "q4_o1": "[de] Menos de 3 meses",
-    "q4_o2": "[de] 3 a 6 meses",
-    "q4_o3": "[de] Más de 6 meses",
-    "q4_o4": "[de] No tengo una fecha límite",
-    "q5": "[de] ¿Tienes un equipo o co-fundadores?",
-    "q5_o1": "[de] Sí, un equipo completo",
-    "q5_o2": "[de] Sí, uno o dos co-fundadores",
-    "q5_o3": "[de] Estoy solo en esto",
-    "q5_o4": "[de] Estoy en proceso de formación",
-    "next": "[de] Siguiente"
+    "title": "Bereitschafts-<1>Test</1>",
+    "subtitle": "Finden Sie heraus, ob Ihr Projekt für die Entwicklung bereit ist",
+    "result_ready_title": "Sie sind bereit zu starten!",
+    "result_ready_desc": "Sie haben eine solide Grundlage, um mit dem Aufbau Ihres Projekts zu beginnen. Kontaktieren Sie uns, um den nächsten Schritt zu tun.",
+    "result_almost_title": "Fast fertig",
+    "result_almost_desc": "Sie haben eine gute Idee, aber es gibt einige Bereiche, die wir gemeinsam verbessern können. Eine Beratungssitzung könnte sehr nützlich sein.",
+    "result_ideation_title": "Ideenfindungsphase",
+    "result_ideation_desc": "Sie befinden sich in einem frühen Stadium, und es ist der perfekte Zeitpunkt, um eine solide Strategie zu definieren! Wir können Ihnen helfen, Ihre Idee zu gestalten.",
+    "retake_test": "Test erneut machen",
+    "question_of": "Frage {{current}} von {{total}}",
+    "q1": "Haben Sie eine klare Vorstellung von Ihrem Produkt oder Ihrer Dienstleistung?",
+    "q1_o1": "Ja, sehr klar und detailliert",
+    "q1_o2": "Ich habe eine allgemeine Vorstellung",
+    "q1_o3": "Es befindet sich in der Entwicklung",
+    "q1_o4": "Nein, ich habe nur eine vage Vorstellung",
+    "q2": "Haben Sie Ihre Zielgruppe definiert?",
+    "q2_o1": "Ja, gründlich",
+    "q2_o2": "Ich habe eine oberflächliche Vorstellung",
+    "q2_o3": "Nein, ich weiß nicht, wo ich anfangen soll",
+    "q2_o4": "Ich bin mir nicht sicher",
+    "q3": "Haben Sie ein zugewiesenes Budget?",
+    "q3_o1": "Ja, und es ist flexibel",
+    "q3_o2": "Ja, aber es ist knapp",
+    "q3_o3": "Nein, ich suche nach einer Finanzierung",
+    "q3_o4": "Ich möchte es lieber nicht sagen",
+    "q4": "Was ist Ihr voraussichtlicher Starttermin?",
+    "q4_o1": "Weniger als 3 Monate",
+    "q4_o2": "3 bis 6 Monate",
+    "q4_o3": "Mehr als 6 Monate",
+    "q4_o4": "Ich habe keinen Termin",
+    "q5": "Haben Sie ein Team oder Mitgründer?",
+    "q5_o1": "Ja, ein komplettes Team",
+    "q5_o2": "Ja, ein oder zwei Mitgründer",
+    "q5_o3": "Ich bin allein dabei",
+    "q5_o4": "Ich befinde mich im Aufbau",
+    "next": "Nächste"
   },
   "contact": {
-    "title": "[de] Hablemos de tu Proyecto",
-    "subtitle": "[de] Completa el formulario o contáctanos directamente. Estamos para ayudarte a construir el futuro.",
-    "info_title": "[de] Información de Contacto",
-    "email": "[de] Email",
-    "phone": "[de] Teléfono",
-    "location": "[de] Ubicación",
-    "form_name": "[de] Nombre",
-    "form_email": "[de] Email",
-    "form_message": "[de] Mensaje",
-    "form_submit": "[de] Enviar Mensaje"
+    "title": "Lassen Sie uns über Ihr Projekt sprechen",
+    "subtitle": "Füllen Sie das Formular aus oder kontaktieren Sie uns direkt. Wir sind hier, um Ihnen zu helfen, die Zukunft zu gestalten.",
+    "info_title": "Kontaktinformationen",
+    "email": "Email",
+    "phone": "Telefon",
+    "location": "Standort",
+    "form_name": "Name",
+    "form_email": "Email",
+    "form_message": "Nachricht",
+    "form_submit": "Nachricht senden"
   },
   "footer": {
-    "copyright": "[de] &copy; {{year}} Bloom Software Factory. Todos los derechos reservados."
+    "copyright": "&copy; {{year}} Bloom Software Factory. Alle Rechte vorbehalten."
   }
 }
