--- a/bloom-landing-page/public/locales/en/translation.json
+++ b/bloom-landing-page/public/locales/en/translation.json
@@ -1,101 +1,101 @@
 {
   "hero": {
-    "softwareFactory": "[en] SOFTWARE FACTORY",
-    "title": "[en] Bloom",
-    "subtitle": "[en] Transformamos ideas en <1>MVPs exitosos</1> y <2>startups revolucionarias</2>. Desarrollo web, diseño UX/UI y prototipos que impulsan el futuro.",
-    "cta_project": "[en] Iniciar Proyecto &rarr;",
-    "cta_portfolio": "[en] Ver Portfolio",
-    "metric_projects": "[en] Proyectos Completados",
-    "metric_clients": "[en] Clientes Satisfechos",
-    "metric_support": "[en] Soporte Técnico"
+    "softwareFactory": "SOFTWARE FACTORY",
+    "title": "Bloom",
+    "subtitle": "We transform ideas into <1>successful MVPs</1> and <2>revolutionary startups</2>. Web development, UX/UI design, and prototypes that drive the future.",
+    "cta_project": "Start Project &rarr;",
+    "cta_portfolio": "View Portfolio",
+    "metric_projects": "Projects Completed",
+    "metric_clients": "Satisfied Clients",
+    "metric_support": "Technical Support"
   },
   "services": {
-    "title": "[en] Nuestros Servicios",
-    "mvp_title": "[en] MVP",
-    "mvp_desc": "[en] Lanzamos tu producto mínimo viable en tiempo récord.",
-    "web_dev_title": "[en] Desarrollo Web",
-    "web_dev_desc": "[en] Aplicaciones web modernas, rápidas y escalables.",
-    "ux_ui_title": "[en] Diseño UX/UI",
-    "ux_ui_desc": "[en] Interfaces intuitivas y atractivas centradas en el usuario.",
-    "mobile_title": "[en] Móvil",
-    "mobile_desc": "[en] Desarrollo de aplicaciones nativas y multiplataforma.",
-    "backend_title": "[en] Backend",
-    "backend_desc": "[en] Sistemas robustos y eficientes para potenciar tu aplicación."
+    "title": "Our Services",
+    "mvp_title": "MVP",
+    "mvp_desc": "We launch your minimum viable product in record time.",
+    "web_dev_title": "Web Development",
+    "web_dev_desc": "Modern, fast, and scalable web applications.",
+    "ux_ui_title": "UX/UI Design",
+    "ux_ui_desc": "Intuitive and attractive user-centered interfaces.",
+    "mobile_title": "Mobile",
+    "mobile_desc": "Native and cross-platform application development.",
+    "backend_title": "Backend",
+    "backend_desc": "Robust and efficient systems to power your application."
   },
   "portfolio": {
-    "title": "[en] Nuestro Portfolio",
-    "project_alpha_title": "[en] Proyecto Alpha",
-    "project_alpha_desc": "[en] Una plataforma de e-commerce para una startup de moda.",
-    "project_beta_title": "[en] Proyecto Beta",
-    "project_beta_desc": "[en] Aplicación móvil para gestión de finanzas personales.",
-    "project_gamma_title": "[en] Proyecto Gamma",
-    "project_gamma_desc": "[en] Dashboard de análisis de datos para una empresa de logística.",
-    "project_delta_title": "[en] Proyecto Delta",
-    "project_delta_desc": "[en] Red social para amantes de las mascotas.",
-    "project_epsilon_title": "[en] Proyecto Epsilon",
-    "project_epsilon_desc": "[en] Sistema de reservas para una cadena de restaurantes.",
-    "project_zeta_title": "[en] Proyecto Zeta",
-    "project_zeta_desc": "[en] Plataforma de e-learning con contenido interactivo.",
-    "view_project": "[en] Ver Proyecto"
+    "title": "Our Portfolio",
+    "project_alpha_title": "Project Alpha",
+    "project_alpha_desc": "An e-commerce platform for a fashion startup.",
+    "project_beta_title": "Project Beta",
+    "project_beta_desc": "Mobile application for personal finance management.",
+    "project_gamma_title": "Project Gamma",
+    "project_gamma_desc": "Data analysis dashboard for a logistics company.",
+    "project_delta_title": "Project Delta",
+    "project_delta_desc": "Social network for pet lovers.",
+    "project_epsilon_title": "Project Epsilon",
+    "project_epsilon_desc": "Reservation system for a restaurant chain.",
+    "project_zeta_title": "Project Zeta",
+    "project_zeta_desc": "E-learning platform with interactive content.",
+    "view_project": "View Project"
   },
   "team": {
-    "title": "[en] Nuestro Equipo",
-    "agustin_role": "[en] Desarrollador Full Stack",
-    "bruno_role": "[en] Diseñador Web y Analista de Marketing",
-    "florencia_role": "[en] Product Manager",
-    "gabriel_role": "[en] Desarrollador Full Stack"
+    "title": "Our Team",
+    "agustin_role": "Full Stack Developer",
+    "bruno_role": "Web Designer and Marketing Analyst",
+    "florencia_role": "Product Manager",
+    "gabriel_role": "Full Stack Developer"
   },
   "readiness": {
-    "title": "[en] Test de <1>Preparación</1>",
-    "subtitle": "[en] Descubre si tu proyecto está listo para el desarrollo",
-    "result_ready_title": "[en] ¡Estás listo para empezar!",
-    "result_ready_desc": "[en] Tienes una base sólida para comenzar a construir tu proyecto. Contáctanos para dar el siguiente paso.",
-    "result_almost_title": "[en] Casi listo",
-    "result_almost_desc": "[en] Tienes una buena idea, pero hay algunas áreas que podemos pulir juntos. Una sesión de consultoría podría ser muy útil.",
-    "result_ideation_title": "[en] Fase de ideación",
-    "result_ideation_desc": "[en] Estás en una etapa temprana, ¡y es el momento perfecto para definir una estrategia sólida! Podemos ayudarte a dar forma a tu idea.",
-    "retake_test": "[en] Hacer el test de nuevo",
-    "question_of": "[en] Pregunta {{current}} de {{total}}",
-    "q1": "[en] ¿Tienes una idea clara de tu producto o servicio?",
-    "q1_o1": "[en] Sí, muy clara y detallada",
-    "q1_o2": "[en] Tengo una idea general",
-    "q1_o3": "[en] Está en desarrollo",
-    "q1_o4": "[en] No, solo tengo una vaga idea",
-    "q2": "[en] ¿Has definido a tu público objetivo?",
-    "q2_o1": "[en] Sí, a fondo",
-    "q2_o2": "[en] Tengo una idea superficial",
-    "q2_o3": "[en] No, no sé por dónde empezar",
-    "q2_o4": "[en] No estoy seguro",
-    "q3": "[en] ¿Cuentas con un presupuesto asignado?",
-    "q3_o1": "[en] Sí, y es flexible",
-    "q3_o2": "[en] Sí, pero es ajustado",
-    "q3_o3": "[en] No, estoy buscando financiación",
-    "q3_o4": "[en] Prefiero no decirlo",
-    "q4": "[en] ¿Cuál es tu plazo de lanzamiento estimado?",
-    "q4_o1": "[en] Menos de 3 meses",
-    "q4_o2": "[en] 3 a 6 meses",
-    "q4_o3": "[en] Más de 6 meses",
-    "q4_o4": "[en] No tengo una fecha límite",
-    "q5": "[en] ¿Tienes un equipo o co-fundadores?",
-    "q5_o1": "[en] Sí, un equipo completo",
-    "q5_o2": "[en] Sí, uno o dos co-fundadores",
-    "q5_o3": "[en] Estoy solo en esto",
-    "q5_o4": "[en] Estoy en proceso de formación",
-    "next": "[en] Siguiente"
+    "title": "Readiness <1>Test</1>",
+    "subtitle": "Find out if your project is ready for development",
+    "result_ready_title": "You are ready to start!",
+    "result_ready_desc": "You have a solid foundation to start building your project. Contact us to take the next step.",
+    "result_almost_title": "Almost ready",
+    "result_almost_desc": "You have a good idea, but there are some areas we can polish together. A consulting session could be very useful.",
+    "result_ideation_title": "Ideation phase",
+    "result_ideation_desc": "You are in an early stage, and it is the perfect time to define a solid strategy! We can help you shape your idea.",
+    "retake_test": "Take the test again",
+    "question_of": "Question {{current}} of {{total}}",
+    "q1": "Do you have a clear idea of your product or service?",
+    "q1_o1": "Yes, very clear and detailed",
+    "q1_o2": "I have a general idea",
+    "q1_o3": "It is in development",
+    "q1_o4": "No, I only have a vague idea",
+    "q2": "Have you defined your target audience?",
+    "q2_o1": "Yes, thoroughly",
+    "q2_o2": "I have a superficial idea",
+    "q2_o3": "No, I don't know where to start",
+    "q2_o4": "I'm not sure",
+    "q3": "Do you have an assigned budget?",
+    "q3_o1": "Yes, and it is flexible",
+    "q3_o2": "Yes, but it is tight",
+    "q3_o3": "No, I'm looking for funding",
+    "q3_o4": "I prefer not to say",
+    "q4": "What is your estimated launch date?",
+    "q4_o1": "Less than 3 months",
+    "q4_o2": "3 to 6 months",
+    "q4_o3": "More than 6 months",
+    "q4_o4": "I don't have a deadline",
+    "q5": "Do you have a team or co-founders?",
+    "q5_o1": "Yes, a complete team",
+    "q5_o2": "Yes, one or two co-founders",
+    "q5_o3": "I'm alone in this",
+    "q5_o4": "I'm in the process of training",
+    "next": "Next"
   },
   "contact": {
-    "title": "[en] Hablemos de tu Proyecto",
-    "subtitle": "[en] Completa el formulario o contáctanos directamente. Estamos para ayudarte a construir el futuro.",
-    "info_title": "[en] Información de Contacto",
-    "email": "[en] Email",
-    "phone": "[en] Teléfono",
-    "location": "[en] Ubicación",
-    "form_name": "[en] Nombre",
-    "form_email": "[en] Email",
-    "form_message": "[en] Mensaje",
-    "form_submit": "[en] Enviar Mensaje"
+    "title": "Let's talk about your Project",
+    "subtitle": "Complete the form or contact us directly. We are here to help you build the future.",
+    "info_title": "Contact Information",
+    "email": "Email",
+    "phone": "Phone",
+    "location": "Location",
+    "form_name": "Name",
+    "form_email": "Email",
+    "form_message": "Message",
+    "form_submit": "Send Message"
   },
   "footer": {
-    "copyright": "[en] &copy; {{year}} Bloom Software Factory. Todos los derechos reservados."
+    "copyright": "&copy; {{year}} Bloom Software Factory. All rights reserved."
   }
 }
